fixed bags with header on mobile

--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ body {
         align-items: center;
     }
 }
+@media (max-width: 1000px) {
+    header {
+         background: #7f00ff ;
+    }
+
+}
 
 /*CODE FOR ABOUT APP BLOCK*/
 @media {
